# dolan

./: .gitignore  Cargo.toml  Dockerfile  README.md  settings.copy.toml
.github/: dependabot.yml  main.workflow
.github/workflows/: main.yml
config/: deploy.yml
src/: commands.rs  main.rs  settings.rs  utils.rs
src/commands/: ai.rs  coder.rs  diablo.rs  gpt.rs  llama.rs  misc.rs  mistral.rs  mod.rs  omega.rs  ping.rs  repl.rs  russia.rs  sdiff.rs  time.rs  translate.rs  trump.rs  weather.rs
src/commands/misc/: trump.rs  weather.rs
src/commands/repl/: go.rs  rust.rs
