[package]
name = "dolan"
version = "0.1.0"
authors = ["Thomas McNiven <hello@vevix.net>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
log = "0.4"
config = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hashbrown = { version = "0.1", features = ["serde"] }
reqwest = "0.9"
lazy_static = "1.2"
regex = "1.1"
twapi = "0.4.1"
chrono = { version = "0.4", features = ["serde"] }
htmlescape = "0.3"
select = "0.4"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
]
version = "0.5"
