[package]
name = "dolan"
version = "0.1.0"
authors = ["Thomas McNiven <hello@vevix.net>"]
edition = "2018"

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
config = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
lazy_static = "1.4"
regex = "1.4"
twapi = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
htmlescape = "0.3"
select = "0.5"
maplit = "1.0"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "rustls_backend",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
]
version = "0.8"
