[package]
name = "dolan"
version = "0.1.0"
authors = ["Thomas McNiven <hello@trmcnvn.dev>"]
edition = "2021"

[dependencies]
pretty_env_logger = "0.5"
log = "0.4"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.9"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
select = "0.6"
tokio = "1.32"
axum = "0.7"
urlencoding = "2.1"
openai = { version = "1.0.0-alpha.13", default-features = false, features = ["rustls"] }

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "rustls_backend",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
]
version = "0.12"
